tests/src/frontend/visibility/invalid/private_abstract_3.sk
base class Foo {
  private const i: Int;
}
